--- a/data/gistlist.toml
+++ b/data/gistlist.toml
@@ -1,1 +1,3 @@
 test = "254a6a942f69eb34c4ad4e7d6b17588f"
+ellipseFitting = "98d37a8b9d722929c13bafcbe256b732"
+ellipseFittingOpenCV = "18325ee61b651de9d15f76727f0efa61"
